Feat: make hexastyle todo api