@@ -1,21 +1,32 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
 	java
+	id("java-library")
 	id("org.springframework.boot") version "3.4.0"
 	id("io.spring.dependency-management") version "1.1.6"
+	kotlin("jvm") version "1.9.22"
+	kotlin("plugin.spring") version "1.9.22"
 }
 
-group = "com"
+group = "me.nettee"
 version = "0.0.1-SNAPSHOT"
 
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
+		sourceCompatibility = JavaVersion.VERSION_21
+		targetCompatibility = JavaVersion.VERSION_21
 	}
 }
 
 configurations {
 	compileOnly {
 		extendsFrom(configurations.annotationProcessor.get())
+	}
+	configureEach {
+		exclude(group = "org.springframework.boot", module = "spring-boot-starter-logging")
 	}
 }
 
@@ -24,17 +35,78 @@ repositories {
 }
 
 dependencies {
+	implementation("org.springframework.boot:spring-boot-starter-web")
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation("org.springframework.boot:spring-boot-starter-validation")
-	implementation("org.springframework.boot:spring-boot-starter-web")
-	compileOnly("org.projectlombok:lombok")
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
-	runtimeOnly("org.postgresql:postgresql")
+	annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
+
+	// logging
+	implementation("org.springframework.boot:spring-boot-starter-log4j2")
+
+	// database
+	runtimeOnly("org.postgresql:postgresql:42.7.4")
+	testRuntimeOnly("com.h2database:h2")
+
+	// flyway
+	implementation("org.flywaydb:flyway-database-postgresql")
+
+	// lombok
+	compileOnly("org.projectlombok:lombok")
 	annotationProcessor("org.projectlombok:lombok")
+
+	// mapstruct
+	implementation("org.mapstruct:mapstruct:1.6.3")
+	annotationProcessor("org.mapstruct:mapstruct-processor:1.6.3")
+	annotationProcessor("org.projectlombok:lombok-mapstruct-binding:0.2.0")
+
+	// SWAGGER
+	//@see <a href="https://springdoc.org/ />
+	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")
+
+	// Querydsl
+	// dependencyManagement.importedProperties => Gradle 전용 설정 : BOM ( 여러 의존성의 호환 가능한 버전을 정의한 파일 )을 동적으로 참조
+	implementation("com.querydsl:querydsl-jpa:${dependencyManagement.importedProperties["querydsl.version"]}:jakarta")
+	annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties["querydsl.version"]}:jakarta")
+	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
+
+	// test
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
-	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+	testImplementation(kotlin("test"))
+	testImplementation("io.kotest:kotest-runner-junit5:5.9.1")
+	testImplementation("org.jetbrains.kotlin:kotlin-reflect")
+	testImplementation("io.mockk:mockk:1.13.12")
+}
+
+sourceSets {
+	test {
+		java {
+			setSrcDirs(listOf("src/test/kotlin"))
+		}
+	}
 }
 
 tasks.withType<Test> {
 	useJUnitPlatform()
 }
+
+tasks.withType<JavaCompile> {
+	options.compilerArgs.addAll(listOf("--enable-preview", "-Amapstruct.defaultComponentModel=spring"))
+}
+
+tasks.withType<Test> {
+	useJUnitPlatform()
+	jvmArgs("--enable-preview")
+}
+
+tasks.named<JavaExec>("bootRun") {
+	jvmArgs("--enable-preview")
+}
+
+tasks.withType<KotlinCompile> {
+	compilerOptions {
+		jvmTarget = JvmTarget.JVM_21
+	}
+}
+
